<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>isen</groupId>
  <artifactId>project</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<javafx.version>19</javafx.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
		    <groupId>org.xerial</groupId>
		    <artifactId>sqlite-jdbc</artifactId>
		    <version>3.30.1</version>
		    <scope>runtime</scope>
		</dependency>
		<dependency>
        	<groupId>org.junit.jupiter</groupId>
        	<artifactId>junit-jupiter-api</artifactId>
        	<version>5.10.0</version>
        	<scope>test</scope>
    	</dependency>
    	<dependency>
        	<groupId>org.junit.jupiter</groupId>
        	<artifactId>junit-jupiter-engine</artifactId>
        	<version>5.10.0</version>
        	<scope>test</scope>
    	</dependency>
    	<dependency>
        	<groupId>org.assertj</groupId>
        	<artifactId>assertj-core</artifactId>
        	<version>3.24.2</version>
        	<scope>test</scope>
   	 	</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>${maven.compiler.target}</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
                <executions>
                    <execution>
						<phase>package</phase>
						<goals>
							<goal>jlink</goal>
						</goals>
                        <id>default-cli</id>
                        <configuration>
                            <launcher>${project.artifactId}</launcher>
                            <jlinkImageName>${project.artifactId}</jlinkImageName>
                            <jlinkZipName>${project.artifactId}-${project.version}</jlinkZipName>
                            <mainClass>app/app.App</mainClass>
                        </configuration>
                    </execution>
                </executions>
			</plugin>
			<plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.2.5</version>
            <configuration>
                <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
            </configuration>
        	</plugin>
		</plugins>
	</build>
</project>
